--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,102 +1,40 @@
-annotated-types==0.7.0
-anyio==4.11.0
-bcrypt==4.1.3
-black==25.11.0
-boto3==1.41.3
-botocore==1.41.3
-certifi==2025.11.12
-cffi==2.0.0
-charset-normalizer==3.4.4
-click==8.3.1
-cryptography==46.0.3
-dnspython==2.8.0
-ecdsa==0.19.1
-email-validator==2.3.0
-fastapi==0.110.1
-filelock==3.20.0
-flake8==7.3.0
-fsspec==2025.12.0
-h11==0.16.0
-hf-xet==1.2.0
-huggingface-hub==0.36.0
-idna==3.11
-iniconfig==2.3.0
-isort==7.0.0
-Jinja2==3.1.6
-jmespath==1.0.1
-joblib==1.5.2
-jq==1.10.0
-lxml==6.0.2
-markdown-it-py==4.0.0
-MarkupSafe==3.0.3
-mccabe==0.7.0
-mdurl==0.1.2
-motor==3.3.1
-mpmath==1.3.0
-mypy==1.18.2
-mypy_extensions==1.1.0
-networkx==3.6
-numpy==2.2.6
-oauthlib==3.3.1
-opencv-python-headless==4.12.0.88
-packaging==25.0
-pandas==2.3.3
-passlib==1.7.4
-pathspec==0.12.1
-pdf2image==1.17.0
-pillow==12.0.0
-platformdirs==4.5.0
-pluggy==1.6.0
-pyasn1==0.6.1
-pycodestyle==2.14.0
-pycparser==2.23
-pydantic==2.12.4
-pydantic_core==2.41.5
-pyflakes==3.4.0
-Pygments==2.19.2
-PyJWT==2.10.1
-pymongo==4.5.0
-PyPDF2==3.0.1
-pytesseract==0.3.13
-pytest==9.0.1
-python-dateutil==2.9.0.post0
-python-docx==1.2.0
-python-dotenv==1.2.1
-python-jose==3.5.0
-python-multipart==0.0.20
-python-pptx==1.0.2
-pytokens==0.3.0
-pytz==2025.2
-PyYAML==6.0.3
-regex==2025.11.3
-requests==2.32.5
-requests-oauthlib==2.0.0
-rich==14.2.0
-rsa==4.9.1
-s3transfer==0.15.0
-s5cmd==0.2.0
-safetensors==0.7.0
-scikit-learn==1.7.2
-scipy==1.16.3
-sentence-transformers==5.1.2
-shellingham==1.5.4
-six==1.17.0
-sniffio==1.3.1
-starlette==0.37.2
-sympy==1.14.0
-threadpoolctl==3.6.0
-tokenizers==0.22.1
-torch==2.9.1
-tqdm==4.67.1
-transformers==4.57.3
-typer==0.20.0
-typing-inspection==0.4.2
-typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
-uvicorn==0.25.0
-watchfiles==1.1.1
-xlsxwriter==3.2.9
+# --- Core framework ---
+fastapi
+uvicorn[standard]
+python-multipart
+pydantic
+python-dotenv
+requests
+
+# --- OCR ---
 easyocr==1.7.1
-torchvision==0.19.1
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
+--extra-index-url https://download.pytorch.org/whl/cpu
+
+# --- PDF / Image Processing ---
+pdf2image
+Pillow
+opencv-python-headless
+
+# --- NLP / Embeddings ---
+transformers
+sentence-transformers
+tokenizers
+
+# --- Cloud / Storage ---
+boto3
+
+# --- Database (MongoDB optional) ---
+motor
+pymongo
+
+# --- Document formats ---
+python-docx
+python-pptx
+PyPDF2
+
+# --- Utilities ---
+python-dateutil
+tqdm
 
