--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,40 +1,39 @@
 # --- Core framework ---
-fastapi
-uvicorn[standard]
-python-multipart
-pydantic
-python-dotenv
-requests
+fastapi==0.110.1
+uvicorn[standard]==0.25.0
+python-multipart==0.0.20
+pydantic==2.12.0
+python-dotenv==1.0.1
+requests==2.31.0
 
 # --- OCR ---
 easyocr==1.7.1
-torch==2.0.1+cpu
-torchvision==0.15.2+cpu
+torch==2.1.2+cpu
+torchvision==0.16.1+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
 
 # --- PDF / Image Processing ---
-pdf2image
-Pillow
-opencv-python-headless
+pdf2image==1.17.0
+Pillow==10.4.0
+opencv-python-headless==4.8.1.78
 
 # --- NLP / Embeddings ---
-transformers
-sentence-transformers
-tokenizers
+transformers==4.36.2
+sentence-transformers==2.2.2
+tokenizers==0.14.1
 
 # --- Cloud / Storage ---
-boto3
+boto3==1.34.34
 
-# --- Database (MongoDB optional) ---
-motor
-pymongo
+# --- Database (MongoDB) ---
+motor==3.3.1
+pymongo==4.5.0
 
 # --- Document formats ---
-python-docx
-python-pptx
-PyPDF2
+python-docx==1.1.0
+python-pptx==1.0.2
+PyPDF2==3.0.1
 
 # --- Utilities ---
-python-dateutil
-tqdm
-
+python-dateutil==2.9.0.post0
+tqdm==4.66.1
