--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,39 +1,38 @@
-# --- Core framework ---
-fastapi==0.110.1
-uvicorn[standard]==0.25.0
-python-multipart==0.0.20
-pydantic==2.12.0
-python-dotenv==1.0.1
-requests==2.31.0
+fastapi
+uvicorn[standard]
+python-multipart
+pydantic
+python-dotenv
+requests
 
-# --- OCR ---
+# OCR
 easyocr==1.7.1
-torch==2.1.2+cpu
-torchvision==0.16.1+cpu
+torch==2.0.1+cpu
+torchvision==0.15.2+cpu
 --extra-index-url https://download.pytorch.org/whl/cpu
 
-# --- PDF / Image Processing ---
-pdf2image==1.17.0
-Pillow==10.4.0
-opencv-python-headless==4.8.1.78
+# PDF / Image
+pdf2image
+Pillow
+opencv-python-headless
 
-# --- NLP / Embeddings ---
-transformers==4.36.2
-sentence-transformers==2.2.2
-tokenizers==0.14.1
+# NLP
+transformers
+sentence-transformers
+tokenizers
 
-# --- Cloud / Storage ---
-boto3==1.34.34
+# Cloud / Storage
+boto3
 
-# --- Database (MongoDB) ---
-motor==3.3.1
-pymongo==4.5.0
+# Database
+motor
+pymongo
 
-# --- Document formats ---
-python-docx==1.1.0
-python-pptx==1.0.2
-PyPDF2==3.0.1
+# Documents
+python-docx
+python-pptx
+PyPDF2
 
-# --- Utilities ---
-python-dateutil==2.9.0.post0
-tqdm==4.66.1
+# Utils
+python-dateutil
+tqdm
