--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://mariyarajiv350_db_user:PsBHhTm0WXDWLMJq@cluster0.qq8ief5.mongodb.net/
 DB_NAME="test_database"
+HF_API_TOKEN=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
