--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,52 +1,41 @@
 # ----------------------------
-# Base Image
+# Lightweight Base Image
 # ----------------------------
 FROM python:3.11-slim
 
-# ----------------------------
-# Environment Config
-# ----------------------------
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=1 \
-    POPPLER_PATH="/usr/bin"
+    PIP_NO_CACHE_DIR=1
 
 # ----------------------------
-# System Dependencies
+# System dependencies (OCR + PDF)
 # ----------------------------
-RUN apt-get update && apt-get install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     poppler-utils \
-    ffmpeg \
-    libsm6 \
-    libxext6 \
+    tesseract-ocr \
     libgl1 \
     libglib2.0-0 \
-    build-essential \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------
-# Working Directory
+# Working directory
 # ----------------------------
 WORKDIR /app
 
 # ----------------------------
-# Install Python packages first (cache friendly)
+# Copy files
 # ----------------------------
-COPY requirements.txt /app/
-RUN pip install --upgrade pip setuptools wheel && \
-    pip install -r requirements.txt
+COPY requirements.txt .
+RUN pip install --upgrade pip && pip install -r requirements.txt
+
+COPY . .
 
 # ----------------------------
-# Copy Rest of the App
-# ----------------------------
-COPY . /app
-
-# ----------------------------
-# Expose Port
+# App port
 # ----------------------------
 EXPOSE 8000
 
 # ----------------------------
-# Run App
+# Start server
 # ----------------------------
 CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
