--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # ----------------------------
-# Lightweight Base Image
+# Base image
 # ----------------------------
 FROM python:3.11-slim
 
@@ -8,34 +8,60 @@ ENV PYTHONUNBUFFERED=1 \
     PIP_NO_CACHE_DIR=1
 
 # ----------------------------
-# System dependencies (OCR + PDF)
+# Install system dependencies
 # ----------------------------
-RUN apt-get update && apt-get install -y --no-install-recommends \
+RUN apt-get update && apt-get install -y \
     poppler-utils \
-    tesseract-ocr \
+    ffmpeg \
+    libsm6 \
+    libxext6 \
     libgl1 \
     libglib2.0-0 \
+    tesseract-ocr \
+    wget \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------
-# Working directory
+# Set working directory
 # ----------------------------
 WORKDIR /app
 
 # ----------------------------
-# Copy files
+# Copy requirements & install
 # ----------------------------
-COPY requirements.txt .
-RUN pip install --upgrade pip && pip install -r requirements.txt
+COPY requirements.txt /app/
 
-COPY . .
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install -r requirements.txt
+
+# -------------------------------------------------------------
+# PRE-DOWNLOAD EASYOCR MODELS TO AVOID RUNTIME DOWNLOAD (Render Fix)
+# -------------------------------------------------------------
+RUN mkdir -p /root/.EasyOCR/model
+
+# Detection model (CRAFT)
+RUN wget -O /root/.EasyOCR/model/craft_mlt_25k.pth \
+    https://github.com/JaidedAI/EasyOCR/releases/download/v1.6/craft_mlt_25k.pth
+
+# Recognition model (English)
+RUN wget -O /root/.EasyOCR/model/english_g2.pth \
+    https://github.com/JaidedAI/EasyOCR/releases/download/v1.6/english_g2.pth
+
+# Latin mapping
+RUN wget -O /root/.EasyOCR/model/latin_g2.pth \
+    https://github.com/JaidedAI/EasyOCR/releases/download/v1.6/latin_g2.pth
 
 # ----------------------------
-# App port
+# Copy backend code
+# ----------------------------
+COPY . /app
+
+# ----------------------------
+# Expose port
 # ----------------------------
 EXPOSE 8000
 
 # ----------------------------
-# Start server
+# Run the app
 # ----------------------------
 CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
