--- a/render.yaml
+++ b/render.yaml
@@ -1,16 +1,23 @@
 services:
   - type: web
-    name: docusort-backend
-    runtime: python
+    name: docusortai-backend
     rootDir: backend
-    buildCommand: |
-      pip install --upgrade pip
-      pip install -r requirements.txt
-    startCommand: uvicorn server:app --host 0.0.0.0 --port $PORT
+    runtime: docker
+    dockerfilePath: Dockerfile
+    plan: starter
     autoDeploy: true
+    envVars:
+      - key: HF_API_KEY
+        sync: false
+      - key: MONGO_URL
+        sync: false
+      - key: DB_NAME
+        value: documents
+
   - type: web
-    name: docusort-frontend
-    runtime: static
+    name: docusortai-frontend
     rootDir: frontend
+    runtime: static
     buildCommand: yarn install && yarn build
-    startCommand: yarn start
+    staticPublishPath: dist
+    autoDeploy: true
