--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,11 +4,10 @@
 FROM python:3.11-slim
 
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1 \
-    PIP_NO_CACHE_DIR=1
+    PYTHONDONTWRITEBYTECODE=1
 
 # ----------------------------
-# Install system dependencies
+# System dependencies
 # ----------------------------
 RUN apt-get update && apt-get install -y \
     poppler-utils \
@@ -18,50 +17,40 @@ RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
     tesseract-ocr \
-    wget \
+    unzip \
+    build-essential \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------
-# Set working directory
+# Pre-download EasyOCR Models
+# ----------------------------
+RUN mkdir -p /root/.EasyOCR/model
+
+# CRAFT Detection Model
+RUN wget -O craft.zip https://github.com/JaidedAI/EasyOCR/releases/download/pre-v1.1.6/craft_mlt_25k.zip \
+    && unzip craft.zip -d /root/.EasyOCR/model \
+    && rm craft.zip
+
+# English Recognition Model
+RUN wget -O english.zip https://github.com/JaidedAI/EasyOCR/releases/download/v1.3/english_g2.zip \
+    && unzip english.zip -d /root/.EasyOCR/model \
+    && rm english.zip
+
+# ----------------------------
+# Working directory
 # ----------------------------
 WORKDIR /app
 
-# ----------------------------
-# Copy requirements & install
-# ----------------------------
-COPY requirements.txt /app/
-
-RUN pip install --upgrade pip setuptools wheel && \
-    pip install -r requirements.txt
-
-# -------------------------------------------------------------
-# PRE-DOWNLOAD EASYOCR MODELS TO AVOID RUNTIME DOWNLOAD (Render Fix)
-# -------------------------------------------------------------
-RUN mkdir -p /root/.EasyOCR/model
-
-# Detection model (CRAFT)
-RUN wget -O /root/.EasyOCR/model/craft_mlt_25k.pth \
-    https://github.com/JaidedAI/EasyOCR/releases/download/v1.6/craft_mlt_25k.pth
-
-# Recognition model (English)
-RUN wget -O /root/.EasyOCR/model/english_g2.pth \
-    https://github.com/JaidedAI/EasyOCR/releases/download/v1.6/english_g2.pth
-
-# Latin mapping
-RUN wget -O /root/.EasyOCR/model/latin_g2.pth \
-    https://github.com/JaidedAI/EasyOCR/releases/download/v1.6/latin_g2.pth
-
-# ----------------------------
-# Copy backend code
-# ----------------------------
+# Copy backend
 COPY . /app
 
+# Install dependencies
+RUN pip install --upgrade pip setuptools wheel \
+    && pip install -r requirements.txt
+
 # ----------------------------
-# Expose port
+# Expose and run FastAPI
 # ----------------------------
 EXPOSE 8000
 
-# ----------------------------
-# Run the app
-# ----------------------------
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
