--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,13 +3,19 @@
 # ----------------------------
 FROM python:3.11-slim
 
+# ----------------------------
+# Environment settings
+# ----------------------------
 ENV PYTHONUNBUFFERED=1 \
-    PYTHONDONTWRITEBYTECODE=1
+    PYTHONDONTWRITEBYTECODE=1 \
+    PIP_NO_CACHE_DIR=1
 
 # ----------------------------
-# System dependencies
+# Install system dependencies
 # ----------------------------
 RUN apt-get update && apt-get install -y \
+    wget \
+    unzip \
     poppler-utils \
     ffmpeg \
     libsm6 \
@@ -17,40 +23,51 @@ RUN apt-get update && apt-get install -y \
     libgl1 \
     libglib2.0-0 \
     tesseract-ocr \
-    unzip \
     build-essential \
     && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 # ----------------------------
-# Pre-download EasyOCR Models
+# EasyOCR Model Directory
 # ----------------------------
 RUN mkdir -p /root/.EasyOCR/model
 
-# CRAFT Detection Model
+# ----------------------------
+# Download EasyOCR models (smallest stable versions)
+# ----------------------------
+
+# CRAFT Text Detection Model
 RUN wget -O craft.zip https://github.com/JaidedAI/EasyOCR/releases/download/pre-v1.1.6/craft_mlt_25k.zip \
     && unzip craft.zip -d /root/.EasyOCR/model \
     && rm craft.zip
 
-# English Recognition Model
-RUN wget -O english.zip https://github.com/JaidedAI/EasyOCR/releases/download/v1.3/english_g2.zip \
-    && unzip english.zip -d /root/.EasyOCR/model \
-    && rm english.zip
+# English Text Recognition Model
+RUN wget -O eng.zip https://github.com/JaidedAI/EasyOCR/releases/download/v1.3/english_g2.zip \
+    && unzip eng.zip -d /root/.EasyOCR/model \
+    && rm eng.zip
 
 # ----------------------------
 # Working directory
 # ----------------------------
 WORKDIR /app
 
-# Copy backend
-COPY . /app
-
-# Install dependencies
-RUN pip install --upgrade pip setuptools wheel \
-    && pip install -r requirements.txt
+# ----------------------------
+# Install Python dependencies
+# ----------------------------
+COPY requirements.txt /app/
+RUN pip install --upgrade pip setuptools wheel && \
+    pip install -r requirements.txt
 
 # ----------------------------
-# Expose and run FastAPI
+# Copy backend code
+# ----------------------------
+COPY . /app
+
+# ----------------------------
+# Expose port
 # ----------------------------
 EXPOSE 8000
 
-CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000"]
+# ----------------------------
+# Start the application
+# ----------------------------
+CMD ["uvicorn", "server:app", "--host", "0.0.0.0", "--port", "8000", "--workers", "1"]
